# signature

./: CMakeLists.txt  README.md
src/: BlockingQueue.hpp  CMakeLists.txt  FileBlockHashWriter.cpp  FileBlockHashWriter.h  FileBlockHasherMD5.cpp  FileBlockHasherMD5.h  FileBlockReader.cpp  FileBlockReader.h  Main.cpp  Task.cpp  Task.h  Worker.h
src/data/: BlockHash.h  FileBlock.h  FileBlockHashBuffer.cpp  FileBlockHashBuffer.h
test/: CMakeLists.txt  test.cpp
